crates/adoc-cli/tests/snapshots/integration__snapshots_cli__check_decision_accepted_empty_decided_by_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
decision_accepted_empty_decided_by.adoc:3:1: error[schema.missing_field] accepted decision `billing.policy` is missing required field `decided_by`
  object_id: billing.policy
  help: Accepted decisions require non-empty `decided_by`.
1 errors, 0 warnings
---stderr---
