crates/adoc-cli/tests/snapshots/integration__snapshots_cli__check_nested_typed_block_in_body_flags.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
expression: combined
---
exit-success: false
---stdout---
nested_typed_block_in_body.adoc:9:1: error[parse.nested_typed_block] nested typed block opener is not allowed inside a typed block
  help: nested typed blocks are not supported in V0; declare each typed block at top level
1 errors, 0 warnings
---stderr---
