crates/adoc-cli/tests/snapshots/integration__snapshots_cli__check_verified_claims_pilot_clean.snap
---
source: crates/adoc-cli/tests/snapshots_cli.rs
assertion_line: 130
expression: combined
---
exit-success: true
---stdout---
0 errors, 0 warnings
---stderr---
